<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/control_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controls_error_title"
        android:textColor="@color/control_foreground" />

    <TextView
        android:id="@+id/error_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.6"
        android:textColor="@color/control_foreground"
        tools:text="@string/controls_error_x" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/controls_retry"
        android:textColor="@color/control_foreground"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_retry"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:iconTint="@color/control_foreground"
        app:strokeColor="@color/control_foreground"
        app:strokeWidth="1dp" />
</LinearLayout>