<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#FFF">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/controls_back"
            android:padding="8dp"
            android:src="@drawable/ic_chevron_left" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/control_foreground"
                tools:text="Video title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/control_foreground"
                tools:text="Video description" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/top_bar_extras_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/space_8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/space_8"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cast"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/controls_cast"
                android:padding="8dp"
                android:src="@drawable/ic_feature_cast"
                android:visibility="gone"
                app:tint="@color/control_foreground"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/picture_in_picture"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/controls_picture_in_picture"
                android:padding="8dp"
                android:src="@drawable/ic_pip"
                android:visibility="gone"
                app:tint="@color/control_foreground"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backward"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_oval"
            android:backgroundTint="@color/control_background"
            android:contentDescription="@string/controls_backward_10"
            android:padding="8dp"
            android:src="@drawable/ic_backward_10"
            app:tint="@color/control_foreground" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_oval"
            android:backgroundTint="@color/control_background"
            android:contentDescription="@string/controls_play"
            android:padding="8dp"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_oval"
            android:backgroundTint="@color/control_background"
            android:contentDescription="@string/controls_pause"
            android:padding="8dp"
            android:src="@drawable/ic_pause" />

        <ImageView
            android:id="@+id/forward"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/shape_oval"
            android:backgroundTint="@color/control_background"
            android:contentDescription="@string/controls_forward_10"
            android:padding="8dp"
            android:src="@drawable/ic_forward_10"
            app:tint="@color/control_foreground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_bottom"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:progressBackgroundTint="@color/seek_background"
                android:progressDrawable="@drawable/seek_track"
                android:progressTint="@color/control_accent"
                android:secondaryProgressTint="@color/control_foreground"
                android:thumb="@drawable/seek_thumb"
                android:thumbTint="@color/control_accent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_current"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:progress="25"
                tools:secondaryProgress="50" />

            <io.getimpulse.player.component.SeekSlider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="@dimen/mtrl_slider_widget_height"
                android:padding="0dp"
                android:valueFrom="0"
                android:valueTo="100"
                app:haloColor="@color/control_foreground"
                app:haloRadius="10dp"
                app:labelBehavior="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_current"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbColor="@color/control_accent"
                app:thumbHeight="12dp"
                app:thumbWidth="12dp"
                app:trackColor="@color/control_background"
                app:trackHeight="2dp"
                app:trackInsideCornerSize="12dp" />

            <TextView
                android:id="@+id/time_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical|end"
                android:minWidth="24dp"
                android:text="0:00"
                android:textColor="@color/control_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_divider"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText"
                tools:text="88:06" />

            <TextView
                android:id="@+id/time_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical|end"
                android:text="@string/controls_seek_divider"
                android:textColor="@color/control_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_duration"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:gravity="center_vertical|end"
                android:text="0:00"
                android:textColor="@color/control_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText"
                tools:text="21:15" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/space_8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent">

            <io.getimpulse.player.component.BarButtonView
                android:id="@+id/quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/controls_quality" />

            <io.getimpulse.player.component.BarButtonView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/controls_speed" />

            <LinearLayout
                android:id="@+id/bottom_bar_extras_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@drawable/space_8"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:showDividers="middle" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/bottom_bar_extras_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@drawable/space_8"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:showDividers="middle" />

            <ImageView
                android:id="@+id/expand"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/controls_fullscreen_enter"
                android:padding="8dp"
                android:src="@drawable/ic_screen_expand"
                android:visibility="gone"
                app:tint="@color/control_foreground"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/shrink"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/controls_fullscreen_exit"
                android:padding="8dp"
                android:src="@drawable/ic_screen_shrink"
                android:visibility="gone"
                app:tint="@color/control_foreground" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>